css/style.css
/* ... */
.container-grid {
    display: grid;
    grid-template-columns: 200px 1fr; /* Sidebar + Main content */
    grid-template-rows: auto;
}

@media (max-width: 768px) {
    .container-grid {
        grid-template-columns: 1fr; /* Stack items on small screens */
    }
}


/* --------Experience------------ */

/* span {
    content: "\21DB";
  }

@media (max-width:800px)
{
    .submit-image{
        display: none;
    }
} */

.iconSocial img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%; /* Ensure the icons are round */
}

/* .timeline-img {
    width: 145px;
    height: 145px;
    border-radius: 50%;
    object-fit: cover;
    margin-top: -40px;
    margin-right: -9px;
    margin-left: 250px;
} */
.timeline-img {
    width: 27%;
    height: auto; 
    border-radius: 50%;
    object-fit: cover;
    margin-top: -40px;
    margin-right: -9px;
    margin-left: 38%; 
}



/* .image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%; 
    margin: auto;
}

.image-container img {
    margin-top: 20px;
    max-width: 150px;
    height: auto; 
} */



.main-timeline {
    position: relative
}

.main-timeline:before {
    content: "";
    display: block;
    width: 2px;
    height: 100%;
    background: #c6c6c6;
    margin: 0 auto;
    position: absolute;
    top: 0;
    left: 0;
    right: 0
}

.main-timeline .timeline {
    margin-bottom: 40px;
    position: relative
}

.main-timeline .timeline:after {
    content: "";
    display: block;
    clear: both
}

.main-timeline .icon {
    width: 18px;
    height: 18px;
    line-height: 18px;
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0
}

@media (max-width: 767px) {
    .main-timeline .icon:before,
    .main-timeline .icon:after {
        content: "";
        width: 100%;
        height: 100%;
        border-radius: 50%;
        position: absolute;
        top: 0;
        left: 0;
    }
}

.main-timeline .icon:before {
    background: #fff;
    border: 2px solid #232323;
    left: -3px
}

.main-timeline .icon:after {
    border: 2px solid #c6c6c6;
    left: 3px
}

.main-timeline .timeline:hover .icon:before {
    left: 4px;
    transition: all 0.3s ease-in-out; /* Added transition */

}

.main-timeline .timeline:hover .icon:after {
    left: -4px;
    transition: all 0.3s ease-in-out; /* Added transition */

}

.main-timeline .date-content {
    width: 50%;
    height:200px;
    float: left;
    margin-top: 22px;
    position: relative
}

.main-timeline .date-content:before {
    content: "";
    width: 40%;
    height: 2px;
    background: #c6c6c6;
    margin: auto 0;
    position: absolute;
    top: 0;
    right: 10px;
    bottom: 0
}

.main-timeline .date-outer {
    width: 125px;
    height: 125px;
    font-size: 16px;
    text-align: center;
    margin: auto;
    z-index: 1
}

.main-timeline .date {
    width: 100%;
    margin: auto;
    position: absolute;
    top: 27%;
    left: 0
}


.main-timeline .timeline-content {
    width: 50%;
    padding: 20px 0 20px 50px;
    float: right
}

.main-timeline .title {
    font-size: 19px;
    font-weight: 700;
    line-height: 12px;
    margin: 0 0 15px 0
}

.main-timeline .description {
    margin-bottom: 0
}

.main-timeline .timeline:nth-child(2n) .date-content {
    float: right
}

.main-timeline .timeline:nth-child(2n) .date-content:before {
    left: 10px
}

.main-timeline .timeline:nth-child(2n) .timeline-content {
    padding: 20px 50px 20px 0;
    text-align: right
}

@media only screen and (max-width: 991px) {
    .main-timeline .date-content {
        margin-top: 35px
    }
    .main-timeline .date-content:before {
        width: 22.5%
    }
    .main-timeline .timeline-content {
        padding: 10px 0 10px 30px
    }
    .main-timeline .title {
        font-size: 17px
    }
    .main-timeline .timeline:nth-child(2n) .timeline-content {
        padding: 10px 30px 10px 0
    }
}

@media only screen and (max-width: 767px) {
    .main-timeline:before {
        margin: 0;
        left: 7px
    }
    .main-timeline .timeline {
        margin-bottom: 20px
    }
    .main-timeline .timeline:last-child {
        margin-bottom: 0
    }
    .main-timeline .icon {
        margin: auto 0
        /* margin: auto 40px */
    }
    .main-timeline .date-content {
        width: 95%;
        float: right;
        margin-top: 0
    }
    .main-timeline .date-content:before {
        display: none
    }
    .main-timeline .date-outer {
        width: 110px;
        height: 110px
    }
    .main-timeline .date-outer:before,
    .main-timeline .date-outer:after {
        width: 110px;
        height: 110px
    }
    .main-timeline .date {
        top: 30%
    }
    .main-timeline .year {
        font-size: 24px
    }
    .main-timeline .timeline-content,
    .main-timeline .timeline:nth-child(2n) .timeline-content {
        width: 100%;
        /* text-align: center; */
        text-align: left;
        /* padding: 10px 0 */
        padding-left: 75px;
    }
    .main-timeline .title {
        margin-top: 15px;
        margin-bottom: 10px
    }
}


/* --------------------------------------------------------------- */ 
/* Adjusting Timeline Icon size for every screensize */ 
/* --------------------------------------------------------------- */ 

@media only screen and (max-width: 1450px) {

    .timeline-img {
        width: 35%;
        height: auto; 
        border-radius: 50%;
        object-fit: cover;
        margin-top: -40px;
        margin-right: -9px;
        margin-left: 38%; 
    }
}


@media only screen and (max-width: 991px) {

    .timeline-img {
        width: 50%;
        height: auto; 
        border-radius: 50%;
        object-fit: cover;
        margin-top: -40px;
        margin-right: -9px;
        /* margin-left: 38%;  */
        margin-left: 25%; 
    }
}
/* ... */

